// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`themes admin - theme shape 1`] = `
{
  "_getColorValue": [Function],
  "_tokens": {
    "colors": {
      "beige": "#FFF0E5",
      "beige-100": "#FFF0E5",
      "black": "#000000",
      "blue": "#1557FF",
      "blue-0": "#F5FCFF",
      "blue-100": "#D3F2FF",
      "blue-300": "#66C4FF",
      "blue-400": "#3388FF",
      "blue-500": "#1557FF",
      "blue-800": "#1D2340",
      "gray-100": "#F5F5F5",
      "gray-200": "#EEEEEE",
      "gray-300": "#E0E0E0",
      "gray-600": "#9E9E9E",
      "gray-800": "#616161",
      "gray-900": "#424242",
      "green": "#008A27",
      "green-0": "#F5FFE3",
      "green-100": "#EAFDC6",
      "green-400": "#AEE938",
      "green-700": "#008A27",
      "green-900": "#151C07",
      "hyper": "#3A10E5",
      "hyper-400": "#5533FF",
      "hyper-500": "#3A10E5",
      "lightBlue": "#66C4FF",
      "lightGreen": "#AEE938",
      "navy": "#10162F",
      "navy-100": "rgba(16,22,47,0.04)",
      "navy-200": "rgba(16,22,47,0.12)",
      "navy-300": "rgba(16,22,47,0.28)",
      "navy-400": "rgba(16,22,47,0.47)",
      "navy-500": "rgba(16,22,47,0.63)",
      "navy-600": "rgba(16,22,47,0.75)",
      "navy-700": "rgba(16,22,47,0.86)",
      "navy-800": "#10162F",
      "navy-900": "#0A0D1C",
      "orange": "#FF8C00",
      "orange-100": "#FFE8CC",
      "orange-500": "#FF8C00",
      "paleBlue": "#F5FCFF",
      "paleGreen": "#F5FFE3",
      "palePink": "#FFF5FF",
      "paleRed": "#DC5879",
      "paleYellow": "#FFFAE5",
      "pink": "#F966FF",
      "pink-0": "#FFF5FF",
      "pink-400": "#F966FF",
      "red": "#E91C11",
      "red-0": "#FBF1F0",
      "red-300": "#E85D7F",
      "red-400": "#DC5879",
      "red-500": "#E91C11",
      "red-600": "#BE1809",
      "red-900": "#280503",
      "white": "#ffffff",
      "white-100": "rgba(255,255,255,0.04)",
      "white-200": "rgba(255,255,255,0.09)",
      "white-300": "rgba(255,255,255,0.2)",
      "white-400": "rgba(255,255,255,0.35)",
      "white-500": "rgba(255,255,255,0.5)",
      "white-600": "rgba(255,255,255,0.65)",
      "white-700": "rgba(255,255,255,0.8)",
      "yellow": "#FFD300",
      "yellow-0": "#FFFAE5",
      "yellow-400": "#CCA900",
      "yellow-500": "#FFD300",
      "yellow-900": "#211B00",
    },
    "elements": {
      "headerHeight": {
        "base": "4rem",
        "md": "5rem",
      },
      "headerZ": 15,
    },
    "modes": {
      "dark": {
        "background": "#10162F",
        "background-contrast": "#000000",
        "background-current": "#10162F",
        "background-disabled": "rgba(255,255,255,0.09)",
        "background-error": "#280503",
        "background-hover": "rgba(255,255,255,0.09)",
        "background-primary": "#0A0D1C",
        "background-selected": "rgba(255,255,255,0.04)",
        "background-success": "#151C07",
        "background-warning": "#211B00",
        "border-disabled": "rgba(255,255,255,0.5)",
        "border-primary": "#ffffff",
        "border-secondary": "rgba(255,255,255,0.65)",
        "border-tertiary": "rgba(255,255,255,0.2)",
        "danger": "#E85D7F",
        "danger-hover": "#DC5879",
        "feedback-error": "#E85D7F",
        "feedback-success": "#AEE938",
        "feedback-warning": "#FFFAE5",
        "interface": "#FFD300",
        "interface-hover": "#CCA900",
        "primary": "#FFD300",
        "primary-hover": "#CCA900",
        "primary-inverse": "#3A10E5",
        "secondary": "#ffffff",
        "secondary-hover": "rgba(255,255,255,0.8)",
        "shadow-primary": "#ffffff",
        "shadow-secondary": "rgba(255,255,255,0.65)",
        "text": "#ffffff",
        "text-accent": "#FFF0E5",
        "text-disabled": "rgba(255,255,255,0.5)",
        "text-secondary": "rgba(255,255,255,0.65)",
      },
      "light": {
        "background": "#ffffff",
        "background-contrast": "#ffffff",
        "background-current": "#ffffff",
        "background-disabled": "rgba(16,22,47,0.12)",
        "background-error": "#FBF1F0",
        "background-hover": "rgba(16,22,47,0.12)",
        "background-primary": "#FFF0E5",
        "background-selected": "rgba(16,22,47,0.04)",
        "background-success": "#F5FFE3",
        "background-warning": "#FFFAE5",
        "border-disabled": "rgba(16,22,47,0.63)",
        "border-primary": "#10162F",
        "border-secondary": "rgba(16,22,47,0.75)",
        "border-tertiary": "rgba(16,22,47,0.28)",
        "danger": "#E91C11",
        "danger-hover": "#BE1809",
        "feedback-error": "#BE1809",
        "feedback-success": "#008A27",
        "feedback-warning": "#FFD300",
        "interface": "#3A10E5",
        "interface-hover": "#5533FF",
        "primary": "#1557FF",
        "primary-hover": "#3388FF",
        "primary-inverse": "#FFD300",
        "secondary": "#10162F",
        "secondary-hover": "rgba(16,22,47,0.86)",
        "shadow-primary": "#10162F",
        "shadow-secondary": "rgba(16,22,47,0.75)",
        "text": "#10162F",
        "text-accent": "#0A0D1C",
        "text-disabled": "rgba(16,22,47,0.63)",
        "text-secondary": "rgba(16,22,47,0.75)",
      },
    },
  },
  "_variables": {
    "mode": {
      "--color-background": "var(--color-white)",
      "--color-background-contrast": "var(--color-white)",
      "--color-background-current": "var(--color-white)",
      "--color-background-disabled": "var(--color-navy-200)",
      "--color-background-error": "var(--color-red-0)",
      "--color-background-hover": "var(--color-navy-200)",
      "--color-background-primary": "var(--color-beige)",
      "--color-background-selected": "var(--color-navy-100)",
      "--color-background-success": "var(--color-green-0)",
      "--color-background-warning": "var(--color-yellow-0)",
      "--color-border-disabled": "var(--color-navy-500)",
      "--color-border-primary": "var(--color-navy-800)",
      "--color-border-secondary": "var(--color-navy-600)",
      "--color-border-tertiary": "var(--color-navy-300)",
      "--color-danger": "var(--color-red-500)",
      "--color-danger-hover": "var(--color-red-600)",
      "--color-feedback-error": "var(--color-red-600)",
      "--color-feedback-success": "var(--color-green-700)",
      "--color-feedback-warning": "var(--color-yellow)",
      "--color-interface": "var(--color-hyper-500)",
      "--color-interface-hover": "var(--color-hyper-400)",
      "--color-primary": "var(--color-blue-500)",
      "--color-primary-hover": "var(--color-blue-400)",
      "--color-primary-inverse": "var(--color-yellow-500)",
      "--color-secondary": "var(--color-navy-800)",
      "--color-secondary-hover": "var(--color-navy-700)",
      "--color-shadow-primary": "var(--color-navy-800)",
      "--color-shadow-secondary": "var(--color-navy-600)",
      "--color-text": "var(--color-navy-800)",
      "--color-text-accent": "var(--color-navy-900)",
      "--color-text-disabled": "var(--color-navy-500)",
      "--color-text-secondary": "var(--color-navy-600)",
    },
    "root": {
      "--color-beige": "#FFF0E5",
      "--color-beige-100": "#FFF0E5",
      "--color-black": "#000000",
      "--color-blue": "#1557FF",
      "--color-blue-0": "#F5FCFF",
      "--color-blue-100": "#D3F2FF",
      "--color-blue-300": "#66C4FF",
      "--color-blue-400": "#3388FF",
      "--color-blue-500": "#1557FF",
      "--color-blue-800": "#1D2340",
      "--color-gray-100": "#F5F5F5",
      "--color-gray-200": "#EEEEEE",
      "--color-gray-300": "#E0E0E0",
      "--color-gray-600": "#9E9E9E",
      "--color-gray-800": "#616161",
      "--color-gray-900": "#424242",
      "--color-green": "#008A27",
      "--color-green-0": "#F5FFE3",
      "--color-green-100": "#EAFDC6",
      "--color-green-400": "#AEE938",
      "--color-green-700": "#008A27",
      "--color-green-900": "#151C07",
      "--color-hyper": "#3A10E5",
      "--color-hyper-400": "#5533FF",
      "--color-hyper-500": "#3A10E5",
      "--color-lightBlue": "#66C4FF",
      "--color-lightGreen": "#AEE938",
      "--color-navy": "#10162F",
      "--color-navy-100": "rgba(16,22,47,0.04)",
      "--color-navy-200": "rgba(16,22,47,0.12)",
      "--color-navy-300": "rgba(16,22,47,0.28)",
      "--color-navy-400": "rgba(16,22,47,0.47)",
      "--color-navy-500": "rgba(16,22,47,0.63)",
      "--color-navy-600": "rgba(16,22,47,0.75)",
      "--color-navy-700": "rgba(16,22,47,0.86)",
      "--color-navy-800": "#10162F",
      "--color-navy-900": "#0A0D1C",
      "--color-orange": "#FF8C00",
      "--color-orange-100": "#FFE8CC",
      "--color-orange-500": "#FF8C00",
      "--color-paleBlue": "#F5FCFF",
      "--color-paleGreen": "#F5FFE3",
      "--color-palePink": "#FFF5FF",
      "--color-paleRed": "#DC5879",
      "--color-paleYellow": "#FFFAE5",
      "--color-pink": "#F966FF",
      "--color-pink-0": "#FFF5FF",
      "--color-pink-400": "#F966FF",
      "--color-red": "#E91C11",
      "--color-red-0": "#FBF1F0",
      "--color-red-300": "#E85D7F",
      "--color-red-400": "#DC5879",
      "--color-red-500": "#E91C11",
      "--color-red-600": "#BE1809",
      "--color-red-900": "#280503",
      "--color-white": "#ffffff",
      "--color-white-100": "rgba(255,255,255,0.04)",
      "--color-white-200": "rgba(255,255,255,0.09)",
      "--color-white-300": "rgba(255,255,255,0.2)",
      "--color-white-400": "rgba(255,255,255,0.35)",
      "--color-white-500": "rgba(255,255,255,0.5)",
      "--color-white-600": "rgba(255,255,255,0.65)",
      "--color-white-700": "rgba(255,255,255,0.8)",
      "--color-yellow": "#FFD300",
      "--color-yellow-0": "#FFFAE5",
      "--color-yellow-400": "#CCA900",
      "--color-yellow-500": "#FFD300",
      "--color-yellow-900": "#211B00",
      "--elements-headerHeight": "4rem",
      "--elements-headerZ": 15,
      "@media only screen and (min-width: 1024px)": {
        "--elements-headerHeight": "5rem",
      },
    },
  },
  "borderRadii": {
    "full": "999px",
    "lg": "8px",
    "md": "4px",
    "none": "0px",
    "sm": "2px",
    "xl": "16px",
  },
  "borders": {
    "1": "1px solid var(--color-border-primary)",
    "2": "2px solid var(--color-border-primary)",
  },
  "breakpoints": {
    "c_base": "@container (min-width: 1px)",
    "c_lg": "@container (min-width: 1200px)",
    "c_md": "@container (min-width: 1024px)",
    "c_sm": "@container (min-width: 768px)",
    "c_xl": "@container (min-width: 1440px)",
    "c_xs": "@container (min-width: 480px)",
    "lg": "@media only screen and (min-width: 1200px)",
    "md": "@media only screen and (min-width: 1024px)",
    "sm": "@media only screen and (min-width: 768px)",
    "xl": "@media only screen and (min-width: 1440px)",
    "xs": "@media only screen and (min-width: 480px)",
  },
  "colors": {
    "background": "var(--color-background)",
    "background-contrast": "var(--color-background-contrast)",
    "background-current": "var(--color-background-current)",
    "background-disabled": "var(--color-background-disabled)",
    "background-error": "var(--color-background-error)",
    "background-hover": "var(--color-background-hover)",
    "background-primary": "var(--color-background-primary)",
    "background-selected": "var(--color-background-selected)",
    "background-success": "var(--color-background-success)",
    "background-warning": "var(--color-background-warning)",
    "beige": "var(--color-beige)",
    "beige-100": "var(--color-beige-100)",
    "black": "var(--color-black)",
    "blue": "var(--color-blue)",
    "blue-0": "var(--color-blue-0)",
    "blue-100": "var(--color-blue-100)",
    "blue-300": "var(--color-blue-300)",
    "blue-400": "var(--color-blue-400)",
    "blue-500": "var(--color-blue-500)",
    "blue-800": "var(--color-blue-800)",
    "border-disabled": "var(--color-border-disabled)",
    "border-primary": "var(--color-border-primary)",
    "border-secondary": "var(--color-border-secondary)",
    "border-tertiary": "var(--color-border-tertiary)",
    "danger": "var(--color-danger)",
    "danger-hover": "var(--color-danger-hover)",
    "feedback-error": "var(--color-feedback-error)",
    "feedback-success": "var(--color-feedback-success)",
    "feedback-warning": "var(--color-feedback-warning)",
    "gray-100": "var(--color-gray-100)",
    "gray-200": "var(--color-gray-200)",
    "gray-300": "var(--color-gray-300)",
    "gray-600": "var(--color-gray-600)",
    "gray-800": "var(--color-gray-800)",
    "gray-900": "var(--color-gray-900)",
    "green": "var(--color-green)",
    "green-0": "var(--color-green-0)",
    "green-100": "var(--color-green-100)",
    "green-400": "var(--color-green-400)",
    "green-700": "var(--color-green-700)",
    "green-900": "var(--color-green-900)",
    "hyper": "var(--color-hyper)",
    "hyper-400": "var(--color-hyper-400)",
    "hyper-500": "var(--color-hyper-500)",
    "interface": "var(--color-interface)",
    "interface-hover": "var(--color-interface-hover)",
    "lightBlue": "var(--color-lightBlue)",
    "lightGreen": "var(--color-lightGreen)",
    "navy": "var(--color-navy)",
    "navy-100": "var(--color-navy-100)",
    "navy-200": "var(--color-navy-200)",
    "navy-300": "var(--color-navy-300)",
    "navy-400": "var(--color-navy-400)",
    "navy-500": "var(--color-navy-500)",
    "navy-600": "var(--color-navy-600)",
    "navy-700": "var(--color-navy-700)",
    "navy-800": "var(--color-navy-800)",
    "navy-900": "var(--color-navy-900)",
    "orange": "var(--color-orange)",
    "orange-100": "var(--color-orange-100)",
    "orange-500": "var(--color-orange-500)",
    "paleBlue": "var(--color-paleBlue)",
    "paleGreen": "var(--color-paleGreen)",
    "palePink": "var(--color-palePink)",
    "paleRed": "var(--color-paleRed)",
    "paleYellow": "var(--color-paleYellow)",
    "pink": "var(--color-pink)",
    "pink-0": "var(--color-pink-0)",
    "pink-400": "var(--color-pink-400)",
    "primary": "var(--color-primary)",
    "primary-hover": "var(--color-primary-hover)",
    "primary-inverse": "var(--color-primary-inverse)",
    "red": "var(--color-red)",
    "red-0": "var(--color-red-0)",
    "red-300": "var(--color-red-300)",
    "red-400": "var(--color-red-400)",
    "red-500": "var(--color-red-500)",
    "red-600": "var(--color-red-600)",
    "red-900": "var(--color-red-900)",
    "secondary": "var(--color-secondary)",
    "secondary-hover": "var(--color-secondary-hover)",
    "shadow-primary": "var(--color-shadow-primary)",
    "shadow-secondary": "var(--color-shadow-secondary)",
    "text": "var(--color-text)",
    "text-accent": "var(--color-text-accent)",
    "text-disabled": "var(--color-text-disabled)",
    "text-secondary": "var(--color-text-secondary)",
    "white": "var(--color-white)",
    "white-100": "var(--color-white-100)",
    "white-200": "var(--color-white-200)",
    "white-300": "var(--color-white-300)",
    "white-400": "var(--color-white-400)",
    "white-500": "var(--color-white-500)",
    "white-600": "var(--color-white-600)",
    "white-700": "var(--color-white-700)",
    "yellow": "var(--color-yellow)",
    "yellow-0": "var(--color-yellow-0)",
    "yellow-400": "var(--color-yellow-400)",
    "yellow-500": "var(--color-yellow-500)",
    "yellow-900": "var(--color-yellow-900)",
  },
  "elements": {
    "headerHeight": "var(--elements-headerHeight)",
    "headerZ": "var(--elements-headerZ)",
  },
  "fontFamily": {
    "accent": ""Suisse", "Apercu", -apple-system, BlinkMacSystemFont,
"Segoe UI", "Roboto", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
"Helvetica Neue", sans-serif",
    "base": ""Apercu", -apple-system, BlinkMacSystemFont, "Segoe UI",
"Roboto", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
sans-serif",
    "monospace": "Monaco, Menlo, "Ubuntu Mono", "Droid Sans Mono", Consolas,
monospace",
    "system": "-apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Ubuntu",
"Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif",
  },
  "fontSize": {
    "14": "0.875rem",
    "16": "1rem",
    "18": "1.125rem",
    "20": "1.25rem",
    "22": "1.375rem",
    "26": "1.625rem",
    "34": "2.125rem",
    "44": "2.75rem",
    "64": "4rem",
  },
  "fontWeight": {
    "400": 400,
    "700": 700,
    "base": 400,
    "title": 700,
  },
  "lineHeight": {
    "base": 1.5,
    "spacedTitle": 1.3,
    "title": 1.2,
  },
  "mode": "light",
  "modes": {
    "dark": {
      "background": "navy-800",
      "background-contrast": "black",
      "background-current": "navy-800",
      "background-disabled": "white-200",
      "background-error": "red-900",
      "background-hover": "white-200",
      "background-primary": "navy-900",
      "background-selected": "white-100",
      "background-success": "green-900",
      "background-warning": "yellow-900",
      "border-disabled": "white-500",
      "border-primary": "white",
      "border-secondary": "white-600",
      "border-tertiary": "white-300",
      "danger": "red-300",
      "danger-hover": "red-400",
      "feedback-error": "red-300",
      "feedback-success": "green-400",
      "feedback-warning": "yellow-0",
      "interface": "yellow-500",
      "interface-hover": "yellow-400",
      "primary": "yellow-500",
      "primary-hover": "yellow-400",
      "primary-inverse": "hyper-500",
      "secondary": "white",
      "secondary-hover": "white-700",
      "shadow-primary": "white",
      "shadow-secondary": "white-600",
      "text": "white",
      "text-accent": "beige",
      "text-disabled": "white-500",
      "text-secondary": "white-600",
    },
    "light": {
      "background": "white",
      "background-contrast": "white",
      "background-current": "white",
      "background-disabled": "navy-200",
      "background-error": "red-0",
      "background-hover": "navy-200",
      "background-primary": "beige",
      "background-selected": "navy-100",
      "background-success": "green-0",
      "background-warning": "yellow-0",
      "border-disabled": "navy-500",
      "border-primary": "navy-800",
      "border-secondary": "navy-600",
      "border-tertiary": "navy-300",
      "danger": "red-500",
      "danger-hover": "red-600",
      "feedback-error": "red-600",
      "feedback-success": "green-700",
      "feedback-warning": "yellow",
      "interface": "hyper-500",
      "interface-hover": "hyper-400",
      "primary": "blue-500",
      "primary-hover": "blue-400",
      "primary-inverse": "yellow-500",
      "secondary": "navy-800",
      "secondary-hover": "navy-700",
      "shadow-primary": "navy-800",
      "shadow-secondary": "navy-600",
      "text": "navy-800",
      "text-accent": "navy-900",
      "text-disabled": "navy-500",
      "text-secondary": "navy-600",
    },
  },
  "name": "admin",
  "spacing": {
    "0": 0,
    "12": "0.75rem",
    "16": "1rem",
    "24": "1.5rem",
    "32": "2rem",
    "4": "0.25rem",
    "40": "2.5rem",
    "48": "3rem",
    "64": "4rem",
    "8": "0.5rem",
    "96": "6rem",
  },
}
`;

exports[`themes core - theme shape 1`] = `
{
  "_getColorValue": [Function],
  "_tokens": {
    "colors": {
      "beige": "#FFF0E5",
      "beige-100": "#FFF0E5",
      "black": "#000000",
      "blue": "#1557FF",
      "blue-0": "#F5FCFF",
      "blue-100": "#D3F2FF",
      "blue-300": "#66C4FF",
      "blue-400": "#3388FF",
      "blue-500": "#1557FF",
      "blue-800": "#1D2340",
      "gray-100": "#F5F5F5",
      "gray-200": "#EEEEEE",
      "gray-300": "#E0E0E0",
      "gray-600": "#9E9E9E",
      "gray-800": "#616161",
      "gray-900": "#424242",
      "green": "#008A27",
      "green-0": "#F5FFE3",
      "green-100": "#EAFDC6",
      "green-400": "#AEE938",
      "green-700": "#008A27",
      "green-900": "#151C07",
      "hyper": "#3A10E5",
      "hyper-400": "#5533FF",
      "hyper-500": "#3A10E5",
      "lightBlue": "#66C4FF",
      "lightGreen": "#AEE938",
      "navy": "#10162F",
      "navy-100": "rgba(16,22,47,0.04)",
      "navy-200": "rgba(16,22,47,0.12)",
      "navy-300": "rgba(16,22,47,0.28)",
      "navy-400": "rgba(16,22,47,0.47)",
      "navy-500": "rgba(16,22,47,0.63)",
      "navy-600": "rgba(16,22,47,0.75)",
      "navy-700": "rgba(16,22,47,0.86)",
      "navy-800": "#10162F",
      "navy-900": "#0A0D1C",
      "orange": "#FF8C00",
      "orange-100": "#FFE8CC",
      "orange-500": "#FF8C00",
      "paleBlue": "#F5FCFF",
      "paleGreen": "#F5FFE3",
      "palePink": "#FFF5FF",
      "paleRed": "#DC5879",
      "paleYellow": "#FFFAE5",
      "pink": "#F966FF",
      "pink-0": "#FFF5FF",
      "pink-400": "#F966FF",
      "red": "#E91C11",
      "red-0": "#FBF1F0",
      "red-300": "#E85D7F",
      "red-400": "#DC5879",
      "red-500": "#E91C11",
      "red-600": "#BE1809",
      "red-900": "#280503",
      "white": "#ffffff",
      "white-100": "rgba(255,255,255,0.04)",
      "white-200": "rgba(255,255,255,0.09)",
      "white-300": "rgba(255,255,255,0.2)",
      "white-400": "rgba(255,255,255,0.35)",
      "white-500": "rgba(255,255,255,0.5)",
      "white-600": "rgba(255,255,255,0.65)",
      "white-700": "rgba(255,255,255,0.8)",
      "yellow": "#FFD300",
      "yellow-0": "#FFFAE5",
      "yellow-400": "#CCA900",
      "yellow-500": "#FFD300",
      "yellow-900": "#211B00",
    },
    "elements": {
      "headerHeight": {
        "base": "4rem",
        "md": "5rem",
      },
      "headerZ": 15,
    },
    "modes": {
      "dark": {
        "background": "#10162F",
        "background-contrast": "#000000",
        "background-current": "#10162F",
        "background-disabled": "rgba(255,255,255,0.09)",
        "background-error": "#280503",
        "background-hover": "rgba(255,255,255,0.09)",
        "background-primary": "#0A0D1C",
        "background-selected": "rgba(255,255,255,0.04)",
        "background-success": "#151C07",
        "background-warning": "#211B00",
        "border-disabled": "rgba(255,255,255,0.5)",
        "border-primary": "#ffffff",
        "border-secondary": "rgba(255,255,255,0.65)",
        "border-tertiary": "rgba(255,255,255,0.2)",
        "danger": "#E85D7F",
        "danger-hover": "#DC5879",
        "feedback-error": "#E85D7F",
        "feedback-success": "#AEE938",
        "feedback-warning": "#FFFAE5",
        "interface": "#FFD300",
        "interface-hover": "#CCA900",
        "primary": "#FFD300",
        "primary-hover": "#CCA900",
        "primary-inverse": "#3A10E5",
        "secondary": "#ffffff",
        "secondary-hover": "rgba(255,255,255,0.8)",
        "shadow-primary": "#ffffff",
        "shadow-secondary": "rgba(255,255,255,0.65)",
        "text": "#ffffff",
        "text-accent": "#FFF0E5",
        "text-disabled": "rgba(255,255,255,0.5)",
        "text-secondary": "rgba(255,255,255,0.65)",
      },
      "light": {
        "background": "#ffffff",
        "background-contrast": "#ffffff",
        "background-current": "#ffffff",
        "background-disabled": "rgba(16,22,47,0.12)",
        "background-error": "#FBF1F0",
        "background-hover": "rgba(16,22,47,0.12)",
        "background-primary": "#FFF0E5",
        "background-selected": "rgba(16,22,47,0.04)",
        "background-success": "#F5FFE3",
        "background-warning": "#FFFAE5",
        "border-disabled": "rgba(16,22,47,0.63)",
        "border-primary": "#10162F",
        "border-secondary": "rgba(16,22,47,0.75)",
        "border-tertiary": "rgba(16,22,47,0.28)",
        "danger": "#E91C11",
        "danger-hover": "#BE1809",
        "feedback-error": "#BE1809",
        "feedback-success": "#008A27",
        "feedback-warning": "#FFD300",
        "interface": "#3A10E5",
        "interface-hover": "#5533FF",
        "primary": "#3A10E5",
        "primary-hover": "#5533FF",
        "primary-inverse": "#FFD300",
        "secondary": "#10162F",
        "secondary-hover": "rgba(16,22,47,0.86)",
        "shadow-primary": "#10162F",
        "shadow-secondary": "rgba(16,22,47,0.75)",
        "text": "#10162F",
        "text-accent": "#0A0D1C",
        "text-disabled": "rgba(16,22,47,0.63)",
        "text-secondary": "rgba(16,22,47,0.75)",
      },
    },
  },
  "_variables": {
    "mode": {
      "--color-background": "var(--color-white)",
      "--color-background-contrast": "var(--color-white)",
      "--color-background-current": "var(--color-white)",
      "--color-background-disabled": "var(--color-navy-200)",
      "--color-background-error": "var(--color-red-0)",
      "--color-background-hover": "var(--color-navy-200)",
      "--color-background-primary": "var(--color-beige)",
      "--color-background-selected": "var(--color-navy-100)",
      "--color-background-success": "var(--color-green-0)",
      "--color-background-warning": "var(--color-yellow-0)",
      "--color-border-disabled": "var(--color-navy-500)",
      "--color-border-primary": "var(--color-navy-800)",
      "--color-border-secondary": "var(--color-navy-600)",
      "--color-border-tertiary": "var(--color-navy-300)",
      "--color-danger": "var(--color-red-500)",
      "--color-danger-hover": "var(--color-red-600)",
      "--color-feedback-error": "var(--color-red-600)",
      "--color-feedback-success": "var(--color-green-700)",
      "--color-feedback-warning": "var(--color-yellow)",
      "--color-interface": "var(--color-hyper-500)",
      "--color-interface-hover": "var(--color-hyper-400)",
      "--color-primary": "var(--color-hyper-500)",
      "--color-primary-hover": "var(--color-hyper-400)",
      "--color-primary-inverse": "var(--color-yellow-500)",
      "--color-secondary": "var(--color-navy-800)",
      "--color-secondary-hover": "var(--color-navy-700)",
      "--color-shadow-primary": "var(--color-navy-800)",
      "--color-shadow-secondary": "var(--color-navy-600)",
      "--color-text": "var(--color-navy-800)",
      "--color-text-accent": "var(--color-navy-900)",
      "--color-text-disabled": "var(--color-navy-500)",
      "--color-text-secondary": "var(--color-navy-600)",
    },
    "root": {
      "--color-beige": "#FFF0E5",
      "--color-beige-100": "#FFF0E5",
      "--color-black": "#000000",
      "--color-blue": "#1557FF",
      "--color-blue-0": "#F5FCFF",
      "--color-blue-100": "#D3F2FF",
      "--color-blue-300": "#66C4FF",
      "--color-blue-400": "#3388FF",
      "--color-blue-500": "#1557FF",
      "--color-blue-800": "#1D2340",
      "--color-gray-100": "#F5F5F5",
      "--color-gray-200": "#EEEEEE",
      "--color-gray-300": "#E0E0E0",
      "--color-gray-600": "#9E9E9E",
      "--color-gray-800": "#616161",
      "--color-gray-900": "#424242",
      "--color-green": "#008A27",
      "--color-green-0": "#F5FFE3",
      "--color-green-100": "#EAFDC6",
      "--color-green-400": "#AEE938",
      "--color-green-700": "#008A27",
      "--color-green-900": "#151C07",
      "--color-hyper": "#3A10E5",
      "--color-hyper-400": "#5533FF",
      "--color-hyper-500": "#3A10E5",
      "--color-lightBlue": "#66C4FF",
      "--color-lightGreen": "#AEE938",
      "--color-navy": "#10162F",
      "--color-navy-100": "rgba(16,22,47,0.04)",
      "--color-navy-200": "rgba(16,22,47,0.12)",
      "--color-navy-300": "rgba(16,22,47,0.28)",
      "--color-navy-400": "rgba(16,22,47,0.47)",
      "--color-navy-500": "rgba(16,22,47,0.63)",
      "--color-navy-600": "rgba(16,22,47,0.75)",
      "--color-navy-700": "rgba(16,22,47,0.86)",
      "--color-navy-800": "#10162F",
      "--color-navy-900": "#0A0D1C",
      "--color-orange": "#FF8C00",
      "--color-orange-100": "#FFE8CC",
      "--color-orange-500": "#FF8C00",
      "--color-paleBlue": "#F5FCFF",
      "--color-paleGreen": "#F5FFE3",
      "--color-palePink": "#FFF5FF",
      "--color-paleRed": "#DC5879",
      "--color-paleYellow": "#FFFAE5",
      "--color-pink": "#F966FF",
      "--color-pink-0": "#FFF5FF",
      "--color-pink-400": "#F966FF",
      "--color-red": "#E91C11",
      "--color-red-0": "#FBF1F0",
      "--color-red-300": "#E85D7F",
      "--color-red-400": "#DC5879",
      "--color-red-500": "#E91C11",
      "--color-red-600": "#BE1809",
      "--color-red-900": "#280503",
      "--color-white": "#ffffff",
      "--color-white-100": "rgba(255,255,255,0.04)",
      "--color-white-200": "rgba(255,255,255,0.09)",
      "--color-white-300": "rgba(255,255,255,0.2)",
      "--color-white-400": "rgba(255,255,255,0.35)",
      "--color-white-500": "rgba(255,255,255,0.5)",
      "--color-white-600": "rgba(255,255,255,0.65)",
      "--color-white-700": "rgba(255,255,255,0.8)",
      "--color-yellow": "#FFD300",
      "--color-yellow-0": "#FFFAE5",
      "--color-yellow-400": "#CCA900",
      "--color-yellow-500": "#FFD300",
      "--color-yellow-900": "#211B00",
      "--elements-headerHeight": "4rem",
      "--elements-headerZ": 15,
      "@media only screen and (min-width: 1024px)": {
        "--elements-headerHeight": "5rem",
      },
    },
  },
  "borderRadii": {
    "full": "999px",
    "lg": "8px",
    "md": "4px",
    "none": "0px",
    "sm": "2px",
    "xl": "16px",
  },
  "borders": {
    "1": "1px solid var(--color-border-primary)",
    "2": "2px solid var(--color-border-primary)",
  },
  "breakpoints": {
    "c_base": "@container (min-width: 1px)",
    "c_lg": "@container (min-width: 1200px)",
    "c_md": "@container (min-width: 1024px)",
    "c_sm": "@container (min-width: 768px)",
    "c_xl": "@container (min-width: 1440px)",
    "c_xs": "@container (min-width: 480px)",
    "lg": "@media only screen and (min-width: 1200px)",
    "md": "@media only screen and (min-width: 1024px)",
    "sm": "@media only screen and (min-width: 768px)",
    "xl": "@media only screen and (min-width: 1440px)",
    "xs": "@media only screen and (min-width: 480px)",
  },
  "colors": {
    "background": "var(--color-background)",
    "background-contrast": "var(--color-background-contrast)",
    "background-current": "var(--color-background-current)",
    "background-disabled": "var(--color-background-disabled)",
    "background-error": "var(--color-background-error)",
    "background-hover": "var(--color-background-hover)",
    "background-primary": "var(--color-background-primary)",
    "background-selected": "var(--color-background-selected)",
    "background-success": "var(--color-background-success)",
    "background-warning": "var(--color-background-warning)",
    "beige": "var(--color-beige)",
    "beige-100": "var(--color-beige-100)",
    "black": "var(--color-black)",
    "blue": "var(--color-blue)",
    "blue-0": "var(--color-blue-0)",
    "blue-100": "var(--color-blue-100)",
    "blue-300": "var(--color-blue-300)",
    "blue-400": "var(--color-blue-400)",
    "blue-500": "var(--color-blue-500)",
    "blue-800": "var(--color-blue-800)",
    "border-disabled": "var(--color-border-disabled)",
    "border-primary": "var(--color-border-primary)",
    "border-secondary": "var(--color-border-secondary)",
    "border-tertiary": "var(--color-border-tertiary)",
    "danger": "var(--color-danger)",
    "danger-hover": "var(--color-danger-hover)",
    "feedback-error": "var(--color-feedback-error)",
    "feedback-success": "var(--color-feedback-success)",
    "feedback-warning": "var(--color-feedback-warning)",
    "gray-100": "var(--color-gray-100)",
    "gray-200": "var(--color-gray-200)",
    "gray-300": "var(--color-gray-300)",
    "gray-600": "var(--color-gray-600)",
    "gray-800": "var(--color-gray-800)",
    "gray-900": "var(--color-gray-900)",
    "green": "var(--color-green)",
    "green-0": "var(--color-green-0)",
    "green-100": "var(--color-green-100)",
    "green-400": "var(--color-green-400)",
    "green-700": "var(--color-green-700)",
    "green-900": "var(--color-green-900)",
    "hyper": "var(--color-hyper)",
    "hyper-400": "var(--color-hyper-400)",
    "hyper-500": "var(--color-hyper-500)",
    "interface": "var(--color-interface)",
    "interface-hover": "var(--color-interface-hover)",
    "lightBlue": "var(--color-lightBlue)",
    "lightGreen": "var(--color-lightGreen)",
    "navy": "var(--color-navy)",
    "navy-100": "var(--color-navy-100)",
    "navy-200": "var(--color-navy-200)",
    "navy-300": "var(--color-navy-300)",
    "navy-400": "var(--color-navy-400)",
    "navy-500": "var(--color-navy-500)",
    "navy-600": "var(--color-navy-600)",
    "navy-700": "var(--color-navy-700)",
    "navy-800": "var(--color-navy-800)",
    "navy-900": "var(--color-navy-900)",
    "orange": "var(--color-orange)",
    "orange-100": "var(--color-orange-100)",
    "orange-500": "var(--color-orange-500)",
    "paleBlue": "var(--color-paleBlue)",
    "paleGreen": "var(--color-paleGreen)",
    "palePink": "var(--color-palePink)",
    "paleRed": "var(--color-paleRed)",
    "paleYellow": "var(--color-paleYellow)",
    "pink": "var(--color-pink)",
    "pink-0": "var(--color-pink-0)",
    "pink-400": "var(--color-pink-400)",
    "primary": "var(--color-primary)",
    "primary-hover": "var(--color-primary-hover)",
    "primary-inverse": "var(--color-primary-inverse)",
    "red": "var(--color-red)",
    "red-0": "var(--color-red-0)",
    "red-300": "var(--color-red-300)",
    "red-400": "var(--color-red-400)",
    "red-500": "var(--color-red-500)",
    "red-600": "var(--color-red-600)",
    "red-900": "var(--color-red-900)",
    "secondary": "var(--color-secondary)",
    "secondary-hover": "var(--color-secondary-hover)",
    "shadow-primary": "var(--color-shadow-primary)",
    "shadow-secondary": "var(--color-shadow-secondary)",
    "text": "var(--color-text)",
    "text-accent": "var(--color-text-accent)",
    "text-disabled": "var(--color-text-disabled)",
    "text-secondary": "var(--color-text-secondary)",
    "white": "var(--color-white)",
    "white-100": "var(--color-white-100)",
    "white-200": "var(--color-white-200)",
    "white-300": "var(--color-white-300)",
    "white-400": "var(--color-white-400)",
    "white-500": "var(--color-white-500)",
    "white-600": "var(--color-white-600)",
    "white-700": "var(--color-white-700)",
    "yellow": "var(--color-yellow)",
    "yellow-0": "var(--color-yellow-0)",
    "yellow-400": "var(--color-yellow-400)",
    "yellow-500": "var(--color-yellow-500)",
    "yellow-900": "var(--color-yellow-900)",
  },
  "elements": {
    "headerHeight": "var(--elements-headerHeight)",
    "headerZ": "var(--elements-headerZ)",
  },
  "fontFamily": {
    "accent": ""Suisse", "Apercu", -apple-system, BlinkMacSystemFont,
"Segoe UI", "Roboto", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
"Helvetica Neue", sans-serif",
    "base": ""Apercu", -apple-system, BlinkMacSystemFont, "Segoe UI",
"Roboto", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
sans-serif",
    "monospace": "Monaco, Menlo, "Ubuntu Mono", "Droid Sans Mono", Consolas,
monospace",
    "system": "-apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Ubuntu",
"Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif",
  },
  "fontSize": {
    "14": "0.875rem",
    "16": "1rem",
    "18": "1.125rem",
    "20": "1.25rem",
    "22": "1.375rem",
    "26": "1.625rem",
    "34": "2.125rem",
    "44": "2.75rem",
    "64": "4rem",
  },
  "fontWeight": {
    "400": 400,
    "700": 700,
    "base": 400,
    "title": 700,
  },
  "lineHeight": {
    "base": 1.5,
    "spacedTitle": 1.3,
    "title": 1.2,
  },
  "mode": "light",
  "modes": {
    "dark": {
      "background": "navy-800",
      "background-contrast": "black",
      "background-current": "navy-800",
      "background-disabled": "white-200",
      "background-error": "red-900",
      "background-hover": "white-200",
      "background-primary": "navy-900",
      "background-selected": "white-100",
      "background-success": "green-900",
      "background-warning": "yellow-900",
      "border-disabled": "white-500",
      "border-primary": "white",
      "border-secondary": "white-600",
      "border-tertiary": "white-300",
      "danger": "red-300",
      "danger-hover": "red-400",
      "feedback-error": "red-300",
      "feedback-success": "green-400",
      "feedback-warning": "yellow-0",
      "interface": "yellow-500",
      "interface-hover": "yellow-400",
      "primary": "yellow-500",
      "primary-hover": "yellow-400",
      "primary-inverse": "hyper-500",
      "secondary": "white",
      "secondary-hover": "white-700",
      "shadow-primary": "white",
      "shadow-secondary": "white-600",
      "text": "white",
      "text-accent": "beige",
      "text-disabled": "white-500",
      "text-secondary": "white-600",
    },
    "light": {
      "background": "white",
      "background-contrast": "white",
      "background-current": "white",
      "background-disabled": "navy-200",
      "background-error": "red-0",
      "background-hover": "navy-200",
      "background-primary": "beige",
      "background-selected": "navy-100",
      "background-success": "green-0",
      "background-warning": "yellow-0",
      "border-disabled": "navy-500",
      "border-primary": "navy-800",
      "border-secondary": "navy-600",
      "border-tertiary": "navy-300",
      "danger": "red-500",
      "danger-hover": "red-600",
      "feedback-error": "red-600",
      "feedback-success": "green-700",
      "feedback-warning": "yellow",
      "interface": "hyper-500",
      "interface-hover": "hyper-400",
      "primary": "hyper-500",
      "primary-hover": "hyper-400",
      "primary-inverse": "yellow-500",
      "secondary": "navy-800",
      "secondary-hover": "navy-700",
      "shadow-primary": "navy-800",
      "shadow-secondary": "navy-600",
      "text": "navy-800",
      "text-accent": "navy-900",
      "text-disabled": "navy-500",
      "text-secondary": "navy-600",
    },
  },
  "name": "core",
  "spacing": {
    "0": 0,
    "12": "0.75rem",
    "16": "1rem",
    "24": "1.5rem",
    "32": "2rem",
    "4": "0.25rem",
    "40": "2.5rem",
    "48": "3rem",
    "64": "4rem",
    "8": "0.5rem",
    "96": "6rem",
  },
}
`;

exports[`themes platform - theme shape 1`] = `
{
  "_getColorValue": [Function],
  "_tokens": {
    "colors": {
      "beige": "#FFF0E5",
      "beige-0": "#FFFBF8",
      "beige-100": "#FFF0E5",
      "black": "#000000",
      "blue": "#1557FF",
      "blue-0": "#F5FCFF",
      "blue-100": "#D3F2FF",
      "blue-300": "#66C4FF",
      "blue-400": "#3388FF",
      "blue-500": "#1557FF",
      "blue-800": "#1D2340",
      "comment-dark": "#84868D",
      "comment-light": "#686C7B",
      "gold": "#8A7300",
      "gold-800": "#8A7300",
      "gray-100": "#F5F5F5",
      "gray-200": "#EEEEEE",
      "gray-300": "#E0E0E0",
      "gray-600": "#9E9E9E",
      "gray-800": "#616161",
      "gray-900": "#424242",
      "green": "#008A27",
      "green-0": "#F5FFE3",
      "green-100": "#EAFDC6",
      "green-400": "#AEE938",
      "green-700": "#008A27",
      "green-900": "#151C07",
      "hyper": "#3A10E5",
      "hyper-400": "#5533FF",
      "hyper-500": "#3A10E5",
      "indent-active-dark": "#3B3D49",
      "indent-active-light": "#BCBDC4",
      "indent-inactive-dark": "#5F616B",
      "indent-inactive-light": "#8E919D",
      "lightBeige": "#FFFBF8",
      "lightBlue": "#66C4FF",
      "lightGreen": "#AEE938",
      "line-number-active-dark": "#CECFD2",
      "line-number-active-light": "#31374C",
      "line-number-inactive-dark": "#84868D",
      "line-number-inactive-light": "#686C7B",
      "navy": "#10162F",
      "navy-100": "rgba(16,22,47,0.04)",
      "navy-200": "rgba(16,22,47,0.12)",
      "navy-300": "rgba(16,22,47,0.28)",
      "navy-400": "rgba(16,22,47,0.47)",
      "navy-500": "rgba(16,22,47,0.63)",
      "navy-600": "rgba(16,22,47,0.75)",
      "navy-700": "rgba(16,22,47,0.86)",
      "navy-800": "#10162F",
      "navy-900": "#0A0D1C",
      "orange": "#FF8C00",
      "orange-100": "#FFE8CC",
      "orange-500": "#FF8C00",
      "orange-800": "#D14900",
      "paleBlue": "#F5FCFF",
      "paleGreen": "#F5FFE3",
      "palePink": "#FFF5FF",
      "paleRed": "#DC5879",
      "paleYellow": "#FFFAE5",
      "pink": "#F966FF",
      "pink-0": "#FFF5FF",
      "pink-400": "#F966FF",
      "pink-800": "#CA00D1",
      "purple": "#B3CCFF",
      "purple-300": "#B3CCFF",
      "red": "#E91C11",
      "red-0": "#FBF1F0",
      "red-300": "#E85D7F",
      "red-400": "#DC5879",
      "red-500": "#E91C11",
      "red-600": "#BE1809",
      "red-900": "#280503",
      "teal": "#006D82",
      "teal-500": "#006D82",
      "white": "#ffffff",
      "white-100": "rgba(255,255,255,0.04)",
      "white-200": "rgba(255,255,255,0.09)",
      "white-300": "rgba(255,255,255,0.2)",
      "white-400": "rgba(255,255,255,0.35)",
      "white-500": "rgba(255,255,255,0.5)",
      "white-600": "rgba(255,255,255,0.65)",
      "white-700": "rgba(255,255,255,0.8)",
      "yellow": "#FFD300",
      "yellow-0": "#FFFAE5",
      "yellow-400": "#CCA900",
      "yellow-500": "#FFD300",
      "yellow-900": "#211B00",
    },
    "elements": {
      "headerHeight": {
        "base": "4rem",
        "md": "5rem",
      },
      "headerZ": 15,
    },
    "modes": {
      "dark": {
        "background": "#10162F",
        "background-contrast": "#000000",
        "background-current": "#10162F",
        "background-disabled": "rgba(255,255,255,0.09)",
        "background-error": "#280503",
        "background-hover": "rgba(255,255,255,0.09)",
        "background-primary": "#0A0D1C",
        "background-selected": "rgba(255,255,255,0.04)",
        "background-success": "#151C07",
        "background-warning": "#211B00",
        "border-disabled": "rgba(255,255,255,0.5)",
        "border-primary": "#ffffff",
        "border-secondary": "rgba(255,255,255,0.65)",
        "border-tertiary": "rgba(255,255,255,0.2)",
        "danger": "#E85D7F",
        "danger-hover": "#DC5879",
        "editor-annotation": "#E85D7F",
        "editor-atom": "#F966FF",
        "editor-attribute": "#AEE938",
        "editor-basic": "#ffffff",
        "editor-comment": "#84868D",
        "editor-constant": "#FF8C00",
        "editor-decoration": "#E85D7F",
        "editor-invalid": "#E85D7F",
        "editor-key": "#66C4FF",
        "editor-keyword": "#B3CCFF",
        "editor-number": "#E85D7F",
        "editor-operator": "#E85D7F",
        "editor-predefined": "#ffffff",
        "editor-property": "#E85D7F",
        "editor-regexp": "#AEE938",
        "editor-string": "#FFD300",
        "editor-tag": "#E85D7F",
        "editor-text": "#FF8C00",
        "editor-ui-background": "#0A0D1C",
        "editor-ui-indent-active": "#3B3D49",
        "editor-ui-indent-inactive": "#5F616B",
        "editor-ui-line-number-active": "#CECFD2",
        "editor-ui-line-number-inactive": "#84868D",
        "editor-ui-text": "#ffffff",
        "editor-value": "#FFD300",
        "editor-variable": "#AEE938",
        "feedback-error": "#E85D7F",
        "feedback-success": "#AEE938",
        "feedback-warning": "#FFFAE5",
        "interface": "#FFD300",
        "interface-hover": "#CCA900",
        "primary": "#FFD300",
        "primary-hover": "#CCA900",
        "primary-inverse": "#3A10E5",
        "secondary": "#ffffff",
        "secondary-hover": "rgba(255,255,255,0.8)",
        "shadow-primary": "#ffffff",
        "shadow-secondary": "rgba(255,255,255,0.65)",
        "text": "#ffffff",
        "text-accent": "#FFF0E5",
        "text-disabled": "rgba(255,255,255,0.5)",
        "text-secondary": "rgba(255,255,255,0.65)",
      },
      "light": {
        "background": "#ffffff",
        "background-contrast": "#ffffff",
        "background-current": "#ffffff",
        "background-disabled": "rgba(16,22,47,0.12)",
        "background-error": "#FBF1F0",
        "background-hover": "rgba(16,22,47,0.12)",
        "background-primary": "#F5FCFF",
        "background-selected": "rgba(16,22,47,0.04)",
        "background-success": "#F5FFE3",
        "background-warning": "#FFFAE5",
        "border-disabled": "rgba(16,22,47,0.63)",
        "border-primary": "#10162F",
        "border-secondary": "rgba(16,22,47,0.75)",
        "border-tertiary": "rgba(16,22,47,0.28)",
        "danger": "#E91C11",
        "danger-hover": "#BE1809",
        "editor-annotation": "#E91C11",
        "editor-atom": "#CA00D1",
        "editor-attribute": "#008A27",
        "editor-basic": "#10162F",
        "editor-comment": "#686C7B",
        "editor-constant": "#D14900",
        "editor-decoration": "#E91C11",
        "editor-invalid": "#E91C11",
        "editor-key": "#006D82",
        "editor-keyword": "#1557FF",
        "editor-number": "#E91C11",
        "editor-operator": "#E91C11",
        "editor-predefined": "#10162F",
        "editor-property": "#E91C11",
        "editor-regexp": "#008A27",
        "editor-string": "#8A7300",
        "editor-tag": "#E91C11",
        "editor-text": "#D14900",
        "editor-ui-background": "#ffffff",
        "editor-ui-indent-active": "#BCBDC4",
        "editor-ui-indent-inactive": "#8E919D",
        "editor-ui-line-number-active": "#31374C",
        "editor-ui-line-number-inactive": "#686C7B",
        "editor-ui-text": "#10162F",
        "editor-value": "#8A7300",
        "editor-variable": "#008A27",
        "feedback-error": "#BE1809",
        "feedback-success": "#008A27",
        "feedback-warning": "#FFD300",
        "interface": "#3A10E5",
        "interface-hover": "#5533FF",
        "primary": "#3A10E5",
        "primary-hover": "#5533FF",
        "primary-inverse": "#FFD300",
        "secondary": "#10162F",
        "secondary-hover": "rgba(16,22,47,0.86)",
        "shadow-primary": "#10162F",
        "shadow-secondary": "rgba(16,22,47,0.75)",
        "text": "#10162F",
        "text-accent": "#0A0D1C",
        "text-disabled": "rgba(16,22,47,0.63)",
        "text-secondary": "rgba(16,22,47,0.75)",
      },
    },
  },
  "_variables": {
    "mode": {
      "--color-background": "var(--color-navy-800)",
      "--color-background-contrast": "var(--color-black)",
      "--color-background-current": "var(--color-navy-800)",
      "--color-background-disabled": "var(--color-white-200)",
      "--color-background-error": "var(--color-red-900)",
      "--color-background-hover": "var(--color-white-200)",
      "--color-background-primary": "var(--color-navy-900)",
      "--color-background-selected": "var(--color-white-100)",
      "--color-background-success": "var(--color-green-900)",
      "--color-background-warning": "var(--color-yellow-900)",
      "--color-border-disabled": "var(--color-white-500)",
      "--color-border-primary": "var(--color-white)",
      "--color-border-secondary": "var(--color-white-600)",
      "--color-border-tertiary": "var(--color-white-300)",
      "--color-danger": "var(--color-red-300)",
      "--color-danger-hover": "var(--color-red-400)",
      "--color-editor-annotation": "var(--color-red-300)",
      "--color-editor-atom": "var(--color-pink-400)",
      "--color-editor-attribute": "var(--color-green-400)",
      "--color-editor-basic": "var(--color-white)",
      "--color-editor-comment": "var(--color-comment-dark)",
      "--color-editor-constant": "var(--color-orange-500)",
      "--color-editor-decoration": "var(--color-red-300)",
      "--color-editor-invalid": "var(--color-red-300)",
      "--color-editor-key": "var(--color-blue-300)",
      "--color-editor-keyword": "var(--color-purple-300)",
      "--color-editor-number": "var(--color-red-300)",
      "--color-editor-operator": "var(--color-red-300)",
      "--color-editor-predefined": "var(--color-white)",
      "--color-editor-property": "var(--color-red-300)",
      "--color-editor-regexp": "var(--color-green-400)",
      "--color-editor-string": "var(--color-yellow-500)",
      "--color-editor-tag": "var(--color-red-300)",
      "--color-editor-text": "var(--color-orange-500)",
      "--color-editor-ui-background": "var(--color-navy-900)",
      "--color-editor-ui-indent-active": "var(--color-indent-active-dark)",
      "--color-editor-ui-indent-inactive": "var(--color-indent-inactive-dark)",
      "--color-editor-ui-line-number-active": "var(--color-line-number-active-dark)",
      "--color-editor-ui-line-number-inactive": "var(--color-line-number-inactive-dark)",
      "--color-editor-ui-text": "var(--color-white)",
      "--color-editor-value": "var(--color-yellow-500)",
      "--color-editor-variable": "var(--color-green-400)",
      "--color-feedback-error": "var(--color-red-300)",
      "--color-feedback-success": "var(--color-green-400)",
      "--color-feedback-warning": "var(--color-yellow-0)",
      "--color-interface": "var(--color-yellow-500)",
      "--color-interface-hover": "var(--color-yellow-400)",
      "--color-primary": "var(--color-yellow-500)",
      "--color-primary-hover": "var(--color-yellow-400)",
      "--color-primary-inverse": "var(--color-hyper-500)",
      "--color-secondary": "var(--color-white)",
      "--color-secondary-hover": "var(--color-white-700)",
      "--color-shadow-primary": "var(--color-white)",
      "--color-shadow-secondary": "var(--color-white-600)",
      "--color-text": "var(--color-white)",
      "--color-text-accent": "var(--color-beige)",
      "--color-text-disabled": "var(--color-white-500)",
      "--color-text-secondary": "var(--color-white-600)",
    },
    "root": {
      "--color-beige": "#FFF0E5",
      "--color-beige-0": "#FFFBF8",
      "--color-beige-100": "#FFF0E5",
      "--color-black": "#000000",
      "--color-blue": "#1557FF",
      "--color-blue-0": "#F5FCFF",
      "--color-blue-100": "#D3F2FF",
      "--color-blue-300": "#66C4FF",
      "--color-blue-400": "#3388FF",
      "--color-blue-500": "#1557FF",
      "--color-blue-800": "#1D2340",
      "--color-comment-dark": "#84868D",
      "--color-comment-light": "#686C7B",
      "--color-gold": "#8A7300",
      "--color-gold-800": "#8A7300",
      "--color-gray-100": "#F5F5F5",
      "--color-gray-200": "#EEEEEE",
      "--color-gray-300": "#E0E0E0",
      "--color-gray-600": "#9E9E9E",
      "--color-gray-800": "#616161",
      "--color-gray-900": "#424242",
      "--color-green": "#008A27",
      "--color-green-0": "#F5FFE3",
      "--color-green-100": "#EAFDC6",
      "--color-green-400": "#AEE938",
      "--color-green-700": "#008A27",
      "--color-green-900": "#151C07",
      "--color-hyper": "#3A10E5",
      "--color-hyper-400": "#5533FF",
      "--color-hyper-500": "#3A10E5",
      "--color-indent-active-dark": "#3B3D49",
      "--color-indent-active-light": "#BCBDC4",
      "--color-indent-inactive-dark": "#5F616B",
      "--color-indent-inactive-light": "#8E919D",
      "--color-lightBeige": "#FFFBF8",
      "--color-lightBlue": "#66C4FF",
      "--color-lightGreen": "#AEE938",
      "--color-line-number-active-dark": "#CECFD2",
      "--color-line-number-active-light": "#31374C",
      "--color-line-number-inactive-dark": "#84868D",
      "--color-line-number-inactive-light": "#686C7B",
      "--color-navy": "#10162F",
      "--color-navy-100": "rgba(16,22,47,0.04)",
      "--color-navy-200": "rgba(16,22,47,0.12)",
      "--color-navy-300": "rgba(16,22,47,0.28)",
      "--color-navy-400": "rgba(16,22,47,0.47)",
      "--color-navy-500": "rgba(16,22,47,0.63)",
      "--color-navy-600": "rgba(16,22,47,0.75)",
      "--color-navy-700": "rgba(16,22,47,0.86)",
      "--color-navy-800": "#10162F",
      "--color-navy-900": "#0A0D1C",
      "--color-orange": "#FF8C00",
      "--color-orange-100": "#FFE8CC",
      "--color-orange-500": "#FF8C00",
      "--color-orange-800": "#D14900",
      "--color-paleBlue": "#F5FCFF",
      "--color-paleGreen": "#F5FFE3",
      "--color-palePink": "#FFF5FF",
      "--color-paleRed": "#DC5879",
      "--color-paleYellow": "#FFFAE5",
      "--color-pink": "#F966FF",
      "--color-pink-0": "#FFF5FF",
      "--color-pink-400": "#F966FF",
      "--color-pink-800": "#CA00D1",
      "--color-purple": "#B3CCFF",
      "--color-purple-300": "#B3CCFF",
      "--color-red": "#E91C11",
      "--color-red-0": "#FBF1F0",
      "--color-red-300": "#E85D7F",
      "--color-red-400": "#DC5879",
      "--color-red-500": "#E91C11",
      "--color-red-600": "#BE1809",
      "--color-red-900": "#280503",
      "--color-teal": "#006D82",
      "--color-teal-500": "#006D82",
      "--color-white": "#ffffff",
      "--color-white-100": "rgba(255,255,255,0.04)",
      "--color-white-200": "rgba(255,255,255,0.09)",
      "--color-white-300": "rgba(255,255,255,0.2)",
      "--color-white-400": "rgba(255,255,255,0.35)",
      "--color-white-500": "rgba(255,255,255,0.5)",
      "--color-white-600": "rgba(255,255,255,0.65)",
      "--color-white-700": "rgba(255,255,255,0.8)",
      "--color-yellow": "#FFD300",
      "--color-yellow-0": "#FFFAE5",
      "--color-yellow-400": "#CCA900",
      "--color-yellow-500": "#FFD300",
      "--color-yellow-900": "#211B00",
      "--elements-headerHeight": "4rem",
      "--elements-headerZ": 15,
      "@media only screen and (min-width: 1024px)": {
        "--elements-headerHeight": "5rem",
      },
    },
  },
  "borderRadii": {
    "full": "999px",
    "lg": "8px",
    "md": "4px",
    "none": "0px",
    "sm": "2px",
    "xl": "16px",
  },
  "borders": {
    "1": "1px solid var(--color-border-primary)",
    "2": "2px solid var(--color-border-primary)",
  },
  "breakpoints": {
    "c_base": "@container (min-width: 1px)",
    "c_lg": "@container (min-width: 1200px)",
    "c_md": "@container (min-width: 1024px)",
    "c_sm": "@container (min-width: 768px)",
    "c_xl": "@container (min-width: 1440px)",
    "c_xs": "@container (min-width: 480px)",
    "lg": "@media only screen and (min-width: 1200px)",
    "md": "@media only screen and (min-width: 1024px)",
    "sm": "@media only screen and (min-width: 768px)",
    "xl": "@media only screen and (min-width: 1440px)",
    "xs": "@media only screen and (min-width: 480px)",
  },
  "colors": {
    "background": "var(--color-background)",
    "background-contrast": "var(--color-background-contrast)",
    "background-current": "var(--color-background-current)",
    "background-disabled": "var(--color-background-disabled)",
    "background-error": "var(--color-background-error)",
    "background-hover": "var(--color-background-hover)",
    "background-primary": "var(--color-background-primary)",
    "background-selected": "var(--color-background-selected)",
    "background-success": "var(--color-background-success)",
    "background-warning": "var(--color-background-warning)",
    "beige": "var(--color-beige)",
    "beige-0": "var(--color-beige-0)",
    "beige-100": "var(--color-beige-100)",
    "black": "var(--color-black)",
    "blue": "var(--color-blue)",
    "blue-0": "var(--color-blue-0)",
    "blue-100": "var(--color-blue-100)",
    "blue-300": "var(--color-blue-300)",
    "blue-400": "var(--color-blue-400)",
    "blue-500": "var(--color-blue-500)",
    "blue-800": "var(--color-blue-800)",
    "border-disabled": "var(--color-border-disabled)",
    "border-primary": "var(--color-border-primary)",
    "border-secondary": "var(--color-border-secondary)",
    "border-tertiary": "var(--color-border-tertiary)",
    "comment-dark": "var(--color-comment-dark)",
    "comment-light": "var(--color-comment-light)",
    "danger": "var(--color-danger)",
    "danger-hover": "var(--color-danger-hover)",
    "editor-annotation": "var(--color-editor-annotation)",
    "editor-atom": "var(--color-editor-atom)",
    "editor-attribute": "var(--color-editor-attribute)",
    "editor-basic": "var(--color-editor-basic)",
    "editor-comment": "var(--color-editor-comment)",
    "editor-constant": "var(--color-editor-constant)",
    "editor-decoration": "var(--color-editor-decoration)",
    "editor-invalid": "var(--color-editor-invalid)",
    "editor-key": "var(--color-editor-key)",
    "editor-keyword": "var(--color-editor-keyword)",
    "editor-number": "var(--color-editor-number)",
    "editor-operator": "var(--color-editor-operator)",
    "editor-predefined": "var(--color-editor-predefined)",
    "editor-property": "var(--color-editor-property)",
    "editor-regexp": "var(--color-editor-regexp)",
    "editor-string": "var(--color-editor-string)",
    "editor-tag": "var(--color-editor-tag)",
    "editor-text": "var(--color-editor-text)",
    "editor-ui-background": "var(--color-editor-ui-background)",
    "editor-ui-indent-active": "var(--color-editor-ui-indent-active)",
    "editor-ui-indent-inactive": "var(--color-editor-ui-indent-inactive)",
    "editor-ui-line-number-active": "var(--color-editor-ui-line-number-active)",
    "editor-ui-line-number-inactive": "var(--color-editor-ui-line-number-inactive)",
    "editor-ui-text": "var(--color-editor-ui-text)",
    "editor-value": "var(--color-editor-value)",
    "editor-variable": "var(--color-editor-variable)",
    "feedback-error": "var(--color-feedback-error)",
    "feedback-success": "var(--color-feedback-success)",
    "feedback-warning": "var(--color-feedback-warning)",
    "gold": "var(--color-gold)",
    "gold-800": "var(--color-gold-800)",
    "gray-100": "var(--color-gray-100)",
    "gray-200": "var(--color-gray-200)",
    "gray-300": "var(--color-gray-300)",
    "gray-600": "var(--color-gray-600)",
    "gray-800": "var(--color-gray-800)",
    "gray-900": "var(--color-gray-900)",
    "green": "var(--color-green)",
    "green-0": "var(--color-green-0)",
    "green-100": "var(--color-green-100)",
    "green-400": "var(--color-green-400)",
    "green-700": "var(--color-green-700)",
    "green-900": "var(--color-green-900)",
    "hyper": "var(--color-hyper)",
    "hyper-400": "var(--color-hyper-400)",
    "hyper-500": "var(--color-hyper-500)",
    "indent-active-dark": "var(--color-indent-active-dark)",
    "indent-active-light": "var(--color-indent-active-light)",
    "indent-inactive-dark": "var(--color-indent-inactive-dark)",
    "indent-inactive-light": "var(--color-indent-inactive-light)",
    "interface": "var(--color-interface)",
    "interface-hover": "var(--color-interface-hover)",
    "lightBeige": "var(--color-lightBeige)",
    "lightBlue": "var(--color-lightBlue)",
    "lightGreen": "var(--color-lightGreen)",
    "line-number-active-dark": "var(--color-line-number-active-dark)",
    "line-number-active-light": "var(--color-line-number-active-light)",
    "line-number-inactive-dark": "var(--color-line-number-inactive-dark)",
    "line-number-inactive-light": "var(--color-line-number-inactive-light)",
    "navy": "var(--color-navy)",
    "navy-100": "var(--color-navy-100)",
    "navy-200": "var(--color-navy-200)",
    "navy-300": "var(--color-navy-300)",
    "navy-400": "var(--color-navy-400)",
    "navy-500": "var(--color-navy-500)",
    "navy-600": "var(--color-navy-600)",
    "navy-700": "var(--color-navy-700)",
    "navy-800": "var(--color-navy-800)",
    "navy-900": "var(--color-navy-900)",
    "orange": "var(--color-orange)",
    "orange-100": "var(--color-orange-100)",
    "orange-500": "var(--color-orange-500)",
    "orange-800": "var(--color-orange-800)",
    "paleBlue": "var(--color-paleBlue)",
    "paleGreen": "var(--color-paleGreen)",
    "palePink": "var(--color-palePink)",
    "paleRed": "var(--color-paleRed)",
    "paleYellow": "var(--color-paleYellow)",
    "pink": "var(--color-pink)",
    "pink-0": "var(--color-pink-0)",
    "pink-400": "var(--color-pink-400)",
    "pink-800": "var(--color-pink-800)",
    "primary": "var(--color-primary)",
    "primary-hover": "var(--color-primary-hover)",
    "primary-inverse": "var(--color-primary-inverse)",
    "purple": "var(--color-purple)",
    "purple-300": "var(--color-purple-300)",
    "red": "var(--color-red)",
    "red-0": "var(--color-red-0)",
    "red-300": "var(--color-red-300)",
    "red-400": "var(--color-red-400)",
    "red-500": "var(--color-red-500)",
    "red-600": "var(--color-red-600)",
    "red-900": "var(--color-red-900)",
    "secondary": "var(--color-secondary)",
    "secondary-hover": "var(--color-secondary-hover)",
    "shadow-primary": "var(--color-shadow-primary)",
    "shadow-secondary": "var(--color-shadow-secondary)",
    "teal": "var(--color-teal)",
    "teal-500": "var(--color-teal-500)",
    "text": "var(--color-text)",
    "text-accent": "var(--color-text-accent)",
    "text-disabled": "var(--color-text-disabled)",
    "text-secondary": "var(--color-text-secondary)",
    "white": "var(--color-white)",
    "white-100": "var(--color-white-100)",
    "white-200": "var(--color-white-200)",
    "white-300": "var(--color-white-300)",
    "white-400": "var(--color-white-400)",
    "white-500": "var(--color-white-500)",
    "white-600": "var(--color-white-600)",
    "white-700": "var(--color-white-700)",
    "yellow": "var(--color-yellow)",
    "yellow-0": "var(--color-yellow-0)",
    "yellow-400": "var(--color-yellow-400)",
    "yellow-500": "var(--color-yellow-500)",
    "yellow-900": "var(--color-yellow-900)",
  },
  "elements": {
    "headerHeight": "var(--elements-headerHeight)",
    "headerZ": "var(--elements-headerZ)",
  },
  "fontFamily": {
    "accent": ""Suisse", "Apercu", -apple-system, BlinkMacSystemFont,
"Segoe UI", "Roboto", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
"Helvetica Neue", sans-serif",
    "base": ""Apercu", -apple-system, BlinkMacSystemFont, "Segoe UI",
"Roboto", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
sans-serif",
    "monospace": "Monaco, Menlo, "Ubuntu Mono", "Droid Sans Mono", Consolas,
monospace",
    "system": "-apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Ubuntu",
"Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif",
  },
  "fontSize": {
    "14": "0.875rem",
    "16": "1rem",
    "18": "1.125rem",
    "20": "1.25rem",
    "22": "1.375rem",
    "26": "1.625rem",
    "34": "2.125rem",
    "44": "2.75rem",
    "64": "4rem",
  },
  "fontWeight": {
    "400": 400,
    "700": 700,
    "base": 400,
    "title": 700,
  },
  "lineHeight": {
    "base": 1.5,
    "spacedTitle": 1.3,
    "title": 1.2,
  },
  "mode": "dark",
  "modes": {
    "dark": {
      "background": "navy-800",
      "background-contrast": "black",
      "background-current": "navy-800",
      "background-disabled": "white-200",
      "background-error": "red-900",
      "background-hover": "white-200",
      "background-primary": "navy-900",
      "background-selected": "white-100",
      "background-success": "green-900",
      "background-warning": "yellow-900",
      "border-disabled": "white-500",
      "border-primary": "white",
      "border-secondary": "white-600",
      "border-tertiary": "white-300",
      "danger": "red-300",
      "danger-hover": "red-400",
      "editor-annotation": "red-300",
      "editor-atom": "pink-400",
      "editor-attribute": "green-400",
      "editor-basic": "white",
      "editor-comment": "comment-dark",
      "editor-constant": "orange-500",
      "editor-decoration": "red-300",
      "editor-invalid": "red-300",
      "editor-key": "blue-300",
      "editor-keyword": "purple-300",
      "editor-number": "red-300",
      "editor-operator": "red-300",
      "editor-predefined": "white",
      "editor-property": "red-300",
      "editor-regexp": "green-400",
      "editor-string": "yellow-500",
      "editor-tag": "red-300",
      "editor-text": "orange-500",
      "editor-ui-background": "navy-900",
      "editor-ui-indent-active": "indent-active-dark",
      "editor-ui-indent-inactive": "indent-inactive-dark",
      "editor-ui-line-number-active": "line-number-active-dark",
      "editor-ui-line-number-inactive": "line-number-inactive-dark",
      "editor-ui-text": "white",
      "editor-value": "yellow-500",
      "editor-variable": "green-400",
      "feedback-error": "red-300",
      "feedback-success": "green-400",
      "feedback-warning": "yellow-0",
      "interface": "yellow-500",
      "interface-hover": "yellow-400",
      "primary": "yellow-500",
      "primary-hover": "yellow-400",
      "primary-inverse": "hyper-500",
      "secondary": "white",
      "secondary-hover": "white-700",
      "shadow-primary": "white",
      "shadow-secondary": "white-600",
      "text": "white",
      "text-accent": "beige",
      "text-disabled": "white-500",
      "text-secondary": "white-600",
    },
    "light": {
      "background": "white",
      "background-contrast": "white",
      "background-current": "white",
      "background-disabled": "navy-200",
      "background-error": "red-0",
      "background-hover": "navy-200",
      "background-primary": "blue-0",
      "background-selected": "navy-100",
      "background-success": "green-0",
      "background-warning": "yellow-0",
      "border-disabled": "navy-500",
      "border-primary": "navy-800",
      "border-secondary": "navy-600",
      "border-tertiary": "navy-300",
      "danger": "red-500",
      "danger-hover": "red-600",
      "editor-annotation": "red-500",
      "editor-atom": "pink-800",
      "editor-attribute": "green-700",
      "editor-basic": "navy-800",
      "editor-comment": "comment-light",
      "editor-constant": "orange-800",
      "editor-decoration": "red-500",
      "editor-invalid": "red-500",
      "editor-key": "teal-500",
      "editor-keyword": "blue-500",
      "editor-number": "red-500",
      "editor-operator": "red-500",
      "editor-predefined": "navy-800",
      "editor-property": "red-500",
      "editor-regexp": "green-700",
      "editor-string": "gold-800",
      "editor-tag": "red-500",
      "editor-text": "orange-800",
      "editor-ui-background": "white",
      "editor-ui-indent-active": "indent-active-light",
      "editor-ui-indent-inactive": "indent-inactive-light",
      "editor-ui-line-number-active": "line-number-active-light",
      "editor-ui-line-number-inactive": "line-number-inactive-light",
      "editor-ui-text": "navy-800",
      "editor-value": "gold-800",
      "editor-variable": "green-700",
      "feedback-error": "red-600",
      "feedback-success": "green-700",
      "feedback-warning": "yellow",
      "interface": "hyper-500",
      "interface-hover": "hyper-400",
      "primary": "hyper-500",
      "primary-hover": "hyper-400",
      "primary-inverse": "yellow-500",
      "secondary": "navy-800",
      "secondary-hover": "navy-700",
      "shadow-primary": "navy-800",
      "shadow-secondary": "navy-600",
      "text": "navy-800",
      "text-accent": "navy-900",
      "text-disabled": "navy-500",
      "text-secondary": "navy-600",
    },
  },
  "name": "platform",
  "spacing": {
    "0": 0,
    "12": "0.75rem",
    "16": "1rem",
    "24": "1.5rem",
    "32": "2rem",
    "4": "0.25rem",
    "40": "2.5rem",
    "48": "3rem",
    "64": "4rem",
    "8": "0.5rem",
    "96": "6rem",
  },
}
`;
